--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -189,8 +189,17 @@ a {
 
 h1, h2, h3, h4, h5 {
   line-height: 1.2;
-  margin: 0;
-  font-family: Montserrat, Helvetica, sans-serif; }
+  font-family: Montserrat, Helvetica, sans-serif;
+  margin: 0; }
+
+blockquote {
+  font-style: italic; }
+
+hr {
+  height: 1px;
+  border: none;
+  width: 100%;
+  background: #f0f0f0; }
 
 img.alignright {
   margin: 20px 0 20px 20px; }
@@ -210,6 +219,28 @@ img {
  * stylings to those must be applied, since the SASS watch
  * script is skipping classes that have no properties.
  */
+.sticky {
+  display: block; }
+
+.bypostauthor {
+  display: block; }
+
+.alignleft {
+  display: inline;
+  float: left;
+  margin-right: 1.5em; }
+
+.alignright {
+  display: inline;
+  float: right;
+  margin-left: 1.5em; }
+
+.aligncenter {
+  clear: both;
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
 ol, ul {
   margin: 0;
   padding: 0;
@@ -242,6 +273,149 @@ ol, ul {
   z-index: 100000;
   /* Above WP toolbar. */ }
 
+#content[tabindex="-1"]:focus {
+  outline: 0; }
+
+.page-content .wp-smiley,
+.entry-content .wp-smiley,
+.comment-content .wp-smiley {
+  border: none;
+  margin-bottom: 0;
+  margin-top: 0;
+  padding: 0; }
+
+embed,
+iframe,
+object {
+  max-width: 100%; }
+
+.wp-caption {
+  margin-bottom: 1.5em;
+  max-width: 100%; }
+
+.wp-caption img[class*="wp-image-"] {
+  display: block;
+  margin-left: auto;
+  margin-right: auto; }
+
+.wp-caption .wp-caption-text {
+  margin: 0.8075em 0; }
+
+.wp-caption-text {
+  text-align: center; }
+
+.gallery {
+  margin-bottom: 1.5em; }
+
+.gallery-item {
+  display: inline-block;
+  text-align: center;
+  vertical-align: top;
+  width: 100%; }
+
+.gallery-columns-2 .gallery-item {
+  max-width: 50%; }
+
+.gallery-columns-3 .gallery-item {
+  max-width: 33.33%; }
+
+.gallery-columns-4 .gallery-item {
+  max-width: 25%; }
+
+.gallery-columns-5 .gallery-item {
+  max-width: 20%; }
+
+.gallery-columns-6 .gallery-item {
+  max-width: 16.66%; }
+
+.gallery-columns-7 .gallery-item {
+  max-width: 14.28%; }
+
+.gallery-columns-8 .gallery-item {
+  max-width: 12.5%; }
+
+.gallery-columns-9 .gallery-item {
+  max-width: 11.11%; }
+
+.gallery-caption {
+  display: block; }
+
+body,
+button,
+input,
+select,
+textarea {
+  color: #404040;
+  font-family: sans-serif;
+  font-size: 16px;
+  font-size: 1rem;
+  line-height: 1.5; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  clear: both; }
+
+p {
+  margin-bottom: 1.5em; }
+
+dfn,
+cite,
+em,
+i {
+  font-style: italic; }
+
+blockquote {
+  margin: 0 1.5em; }
+
+address {
+  margin: 0 0 1.5em; }
+
+pre {
+  background: #eee;
+  font-family: "Courier 10 Pitch", Courier, monospace;
+  font-size: 15px;
+  font-size: 0.9375rem;
+  line-height: 1.6;
+  margin-bottom: 1.6em;
+  max-width: 100%;
+  overflow: auto;
+  padding: 1.6em; }
+
+code,
+kbd,
+tt,
+var {
+  font-family: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
+  font-size: 15px;
+  font-size: 0.9375rem; }
+
+abbr,
+acronym {
+  border-bottom: 1px dotted #666;
+  cursor: help; }
+
+mark,
+ins {
+  background: #fff9c0;
+  text-decoration: none; }
+
+big {
+  font-size: 125%; }
+
+dt {
+  font-weight: bold; }
+
+dd {
+  margin: 0 1.5em 1.5em; }
+
+table {
+  margin: 0 0 1.5em;
+  width: 100%; }
+
 /**
  * Place ul element in the middle of its parent. The structure
  * .center-ul > ul must be followed in order to work. (uds)
@@ -254,12 +428,10 @@ ol, ul {
 /**
  * WordPress required styling
  */
-.float-right,
-.alignright {
+.float-right {
   float: right; }
 
-.float-left,
-.alignleft {
+.float-left {
   float: left; }
 
 .no-float,
@@ -1041,13 +1213,9 @@ hr.clear {
   max-width: 800px; }
 
 .site-header {
-  padding: 15px 0;
-  border-bottom: 1px solid #ddd;
-  position: relative;
-  height: 70px; }
+  position: relative; }
 
 .site-navigation {
-  margin-top: 5px;
   display: inline-block; }
   .site-navigation .menu-toggle {
     padding: 6px 0;
