--- a/assets/sass/components/_mobile-menu.scss
+++ b/assets/sass/components/_mobile-menu.scss
@@ -1,244 +1,279 @@
+/**
+ * DX MOBILE MENU
+ * ============================================================================
+ * Basic styling and settings for the mobile menu. Edit to match each theme's
+ * design. 
+ *
+ * @version 1.1
+ */
+
+/**
+ * VARIABLES
+ * ============================================================================
+ * Setting the menu default variables for easier tweaks.
+ */
+$menu-allow-animation: true;
+$menu-breakpoint: $breakpoint-small;
+
+$menu-icon-size: 26px;
+$menu-icon-line-height: 1;
+$menu-icon-color: #333;
+$menu-icon-color-hover: $color-primary;
+$menu-icon-background: none;
+$menu-icon-border: none;
+
+$menu-item-weight: bold;
+$menu-item-spacing: 20px;
+$menu-item-color: black;
+$menu-item-color-hover: $color-primary;
+$menu-item-border-bottom: 1px solid #f0f0f0;
+
+// Needs higher value for different header heights.
+$menu-container-margin-top: rem-calc( 9px );
+$menu-container-background: rgba(white, 0.95);
+$menu-container-border-bottom: 1px solid #f0f0f0;
+$menu-container-shadow:  0 10px 20px rgba(black, 0.1);
+
+$submenu-background: #f0f0f0;
+$submenu-border-top: 1px solid #ccc;
+$submenu-shadow: none;
+$submenu-safe-zone: 16px;
+
+$menu-dropdown-arrow-line-height: 1.7;
+$menu-dropdown-arrow-size: 20px;
+
+/**
+ * Needs to be used when the mobile menu covers the whole screen while opened
+ * and its possible to scroll inside the menu while maitaining the wrapper element's
+ * positioning. Keep commented out by default.
+ */
 body.is-menu-opened {
 	// overflow: hidden;
 }
 
-.menu-overlay {
-	height: 100%;
-	transform: translate3d(-100%, 0, 0);
-	transition: 0.3s transform;
-	z-index: 90 - 1;
-	position: fixed;
-	top: 0; bottom: 0; left: 0; right: 0;
-	display: block;
-	background: #202022;
-}
-
-.menu-icon {
-	float: left;
+/**
+ * Primary navigation base styling.
+ * ============================================================================
+ */
+.main-navigation {
 	display: inline-block;
-	position: relative;
-	cursor: pointer;
-	transition: 0.3s;
-	margin: rem-calc(13px 0 5px);
-	font-size: 17px;
 
-	&:hover {
-		color: $color-primary;
-		transform: scale(1.01,1);
-	}
-
-	// Disable select on multiple clicks.
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-
-	$menu-icon-thinkness: 3px;
-	$menu-icon-width: 20px;
-
-	&.opened {
-		transition: 0.3s;
-		transform: translateX(8px);
-	}
-
-	&__bar {
-		background: #333;
-		display: block;
-		height: $menu-icon-thinkness / 3;
-		margin: 5px 0;
-		width: $menu-icon-width;
-		transition: 0.3s;
-
-		&.bar--top { margin-top: 3px }
-		&.bar--bot { margin-bottom: 0 }
-	}
-
-	// Hover animations.
-	&.opened &__bar {
-		background: $color-primary;
-		transition: 0.3s;
-
-		&.bar--top {
-			transform: rotate(45deg) translateY(13px);
-		}
-
-		&.bar--mid {
-			transform: scale(0.1);
-			opacity: 0;
-			filter: alpha(opacity=0);
-		}
-
-		&.bar--bot {
-			transform: rotate(-45deg) translateY(-13px);
-		}
-	}
-
-	&__text {
-		float: left;
-		margin-left: $menu-icon-width + 10;
+	.menu-toggle {
 		display: inline-block;
+		color: $menu-icon-color;
+		line-height: $menu-icon-line-height;
+		font-size: $menu-icon-size;
+		background: $menu-icon-background;
+		border: $menu-icon-border;
+
+		&:hover {
+			cursor: pointer;
+			color: $menu-icon-color-hover;
+		}
 	}
-}
 
-.site-navigation .dropdown-arrow {
-	display: none;
-}
+	.menu-item {
+		display: inline-block;
+		position: relative;
+		margin-right: $menu-item-spacing;
+		font-weight: $menu-item-weight;
 
-@media (min-width: $breakpoint-small) {
-	.menu-icon {
-		display: none;
-	}
-}
-
-@media (max-width: $breakpoint-small) {
-	.menu-primary {
-		filter: alpha(opacity=0);
-		pointer-events: none;
-		position: absolute;
-		left: 0;
-		width: 100%;
-		transition: 0.3s transform;
-		transform: translate3d(0, 100%, 0);
-		opacity: 0;
-		z-index: 80;
-		background: #fff;
-
-		.wrap {
-			border-top: 1px solid #ccc;
-		}
-
-		.nav-menu {
-			// width: 95%;
-		}
-
-		&.init {
-			transition: none;
-		}
-
-		&.is-extended {
-			pointer-events: auto;
-			filter: alpha(opacity=100);
-			display: block;
-			transition: 0.3s transform;
-			transform: translate3d(0, 0, 0);
-		    box-shadow: 0 30px 69px rgba(0, 0, 0, 0.2);
-			opacity: 1;
-		}
-
-		.menu {
-			background: #333;
-			list-style: none;
-			margin: 0;
-			padding: 0;
-		}
-
-		.menu-item {
-			display: block;
-			width: 100%;
-			padding: 0;
-
-			a {
-				margin-right: 40px;
-				font-size: 18px;
-				text-align: left;
-
-				@media (max-width: $breakpoint-mobile) {
-					margin-right: 0;
-				}
-			}
+		&:last-of-type {
+			margin-right: 0;
 		}
 
 		a {
-			text-decoration: none;
-			font-weight: normal;
-			text-transform: uppercase;
-			font-size: 15px;
-			padding: 0.5em 1em;
-			display: block;
+			color: $menu-item-color;
 		}
-
 	}
+	
+	/**
+	 * Begin the mobile menu styling.
+	 */
+	@media (max-width: $menu-breakpoint) {
 
-	.menu-item-has-children {
-		position: relative;
-		max-height: 2.7959em;
-		height: 100%;
-		// transition: 0.4s all;
-
-		.dropdown-arrow {
-			font-family: FontAwesome;
-			display: inline-block;
-			position: absolute;
-			top: 0;
-			right: 0;
-			padding: 4px;
-			text-align: center;
-			vertical-align: middle;
-			line-height: 1.56em;
-			cursor: pointer;
-			transition: 0;
-
-			&, & i {
-				-webkit-touch-callout: none;
-				-webkit-user-select: none;
-				-khtml-user-select: none;
-				-moz-user-select: none;
-				-ms-user-select: none;
-				user-select: none;
-			}
-
-			i {
-				transition: 0s;
-			}
-		}
-
-		// Submenu
-		.sub-menu {
-			padding-left: 0;
-			pointer-events: none;
-			transform: translate3d(0, -50%, 0);
-			opacity: 0;
-			position: relative;
-			width: 100%;
-			display: none;
+		.menu-item {
+			border-bottom: $menu-item-border-bottom;
+			margin: 0;
+			display: block;
 
 			a {
-				font-weight: normal;
-				text-transform: none;
+				display: block;
+				padding: rem-calc(8px $global-layout-gutter / 2);
 			}
 
-			.menu-item {
-				&:last-child {
-					border-bottom: none; 
-				}
-			}
-		}
-
-		&.is-extended {
-			max-height: 100%;
-			// transition: 0.4s all;
-
-			& > .dropdown-arrow {
-
-				i {
-					transform: rotate(90deg);
-					// transition: 0.4s transform;
-				}
+			a:hover {
+				color: $menu-item-color-hover;
 			}
 
-			& > .sub-menu {
-				// transition: 0.4s all;
+			&:last-of-type {
+				border-bottom: none;
 			}
 		}
 
-		&.is-extended > .sub-menu {
-			transform: translate3d(0, 0, 0);
-			opacity: 1;
-			filter: alpha(opacity=100);
-			pointer-events: auto;
+		.sub-menu {
+			display: none;
+			border-top: $submenu-border-top;
+			background: $submenu-background;
+		}
+
+		.menu-item.is-extended .sub-menu {
 			display: block;
+		}
+	}
+}
+
+.menu-primary-container {
+	// Needed to fit the custom button
+	float: right;
+}
+
+/**
+ * Displaying the mobile menu on click.
+ */
+@media (max-width: $menu-breakpoint) {
+	.menu-primary-container {
+		display: none;
+		position: absolute;
+		left: 0;
+		width: 100%;
+		margin-top: $menu-container-margin-top;
+		background: $menu-container-background;
+		border-bottom: $menu-container-border-bottom;
+		box-shadow: $menu-container-shadow;
+	}
+
+	&.is-extended .menu-primary-container {
+		display: block;
+	}
+
+	&.is-extended .menu-primary {
+		opacity: 1;
+		transform: translateY(0);
+		pointer-events: auto;
+	}
+}
+
+/**
+ * Starts the standard desktop menu styling.
+ */
+@media (min-width: $menu-breakpoint) {
+	.menu-primary-container {
+		display: block;
+	}
+
+	.main-navigation {
+		.menu-toggle {
+			display: none;
+		}
+
+		.sub-menu {
+			pointer-events: none;
+			opacity: 0;
+			transition: 0.2s;
+			transform: translateY(40px);
+		}
+
+		// Simply show the dropdown menu on hover
+		.menu-item-has-children:hover > .sub-menu {
+			display: block;
+		}
+
+		li {
+			position: relative;
+		}
+
+		li:hover > .sub-menu{
+			opacity: 1;
+			pointer-events: auto;
+			transition: 0.2s;
+			transform: translateY(0);
+		}
+	}
+
+	.menu-item:last-of-type .sub-menu {
+		right: 0;
+		left: auto;
+	}
+
+	.sub-menu {
+		position: absolute;
+		border: 1px solid #ccc;
+		top: calc(100% + #{$submenu-safe-zone - 2} );
+		background: rgba(white, 0.98);
+		max-width: 200px;
+		text-align: left;
+		z-index: 99;
+
+		// Used for easier hover movement.
+		&:before {
+			position: absolute;
+			bottom: 100%;
+			width: 100%;
+			height: $submenu-safe-zone;
+			background: transparent;
+			content: '';
+			display: block;
+		}
+
+		a {
+			display: block;
+			padding: 8px 13px;
+			font-weight: normal;
+			color: black;
+
+			&:hover {
+				background: transparent;
+				color: $color-primary;
+			}
+		}
+
+		li {
+			width: 100%;
+			border-bottom: 1px solid #f0f0f0;
+			float: none;
+			min-width: 200px;
+			display: block;
+		}
+	}
+}
+
+/**
+ * Styling the dropdown-arrow element. It takes more properties
+ * so its in separate module here in the file.
+ */
+.menu-item-has-children {
+	position: relative;
+
+	.dropdown-arrow {
+		height: rem-calc( 10px + 16px * 2 );
+		width: rem-calc( 10px + 16px * 2 );
+		padding: 0;
+
+		font-family: FontAwesome;
+		display: inline-block;
+		position: absolute;
+		top: 0; right: 0;
+		text-align: center; vertical-align: middle;
+		cursor: pointer;
+
+		padding: 4px;
+	    line-height: $menu-dropdown-arrow-line-height;
+	    font-size: $menu-dropdown-arrow-size;
+
+		// Disable select while clicking
+		&, & i {
+			user-select: none;
+		}
+	}
+
+	&.is-extended .dropdown-arrow {
+		transform: rotate(90deg);
+	}
+
+	@media (min-width: $menu-breakpoint) {
+		.dropdown-arrow {
+			display: none;
 		}
 	}
 }
