--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -13,18 +13,18 @@
 @import "base/general";
 @import "base/helpers";
 
-
 // The Foundation 6.0 grid system
 @import "foundation/foundation";
+
+// The Font-Awesome build files
+@import "font-awesome/font-awesome";
 
 // Including plugins before site stlyling to allow overwrite
 @import "plugins/owl";
 
-
 // Separating the largest parts of the site in specific files.
 @import "layout/general";
 @import "layout/header";
-
 
 // Any other module that can be reused multuple times.
 @import "components/buttons";
@@ -32,7 +32,6 @@
 @import "components/elements";
 @import "components/input";
 @import "components/mobile-menu";
-
 
 // If there is anything specific for a page it should be in this folder
 @import "pages/404";
