Add styleguide page

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -552,6 +552,64 @@ hr.clear {
 .position-initial {
   position: initial; }
 
+.dxstarter-styleguide hr {
+  margin: 40px 0; }
+
+.dxstarter-styleguide .theme-colors {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 -10px; }
+
+.dxstarter-styleguide .section-title {
+  border-bottom: 1px solid #f0f0f0;
+  margin-bottom: 40px;
+  padding-bottom: 20px;
+  margin-top: 100px; }
+
+.dxstarter-styleguide .page-header {
+  margin-top: 50px;
+  font-size: 48px;
+  color: black; }
+
+.dxstarter-styleguide .colorbox {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 10%;
+          flex: 1 0 10%;
+  margin: 10px; }
+  .dxstarter-styleguide .colorbox > * {
+    opacity: 0.2; }
+  .dxstarter-styleguide .colorbox .color {
+    padding-bottom: 100%; }
+  .dxstarter-styleguide .colorbox .name {
+    font-size: 13px; }
+
+.dxstarter-styleguide .color-primary > * {
+  opacity: 1; }
+
+.dxstarter-styleguide .color-primary .color {
+  background-color: #4072db; }
+
+.dxstarter-styleguide .color-primary-dark > * {
+  opacity: 1; }
+
+.dxstarter-styleguide .color-primary-dark .color {
+  background-color: #3f3f75; }
+
+.dxstarter-styleguide .color-secondary > * {
+  opacity: 1; }
+
+.dxstarter-styleguide .color-secondary .color {
+  background-color: #5ea54d; }
+
+.dxstarter-styleguide .color-accent > * {
+  opacity: 1; }
+
+.dxstarter-styleguide .color-accent .color {
+  background-color: #ff4902; }
+
 .foundation-mq {
   font-family: "small=0em&medium=32em&large=64em&xlarge=75em&xxlarge=90em"; }
 
