--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -575,16 +575,24 @@ hr.clear {
   color: black; }
 
 .dxstarter-styleguide .colorbox {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 0 10%;
-          flex: 1 0 10%;
-  margin: 10px; }
+  display: inline-block;
+  margin: 10px;
+  max-width: calc(10% - 20px);
+  width: 100%; }
+  @media (max-width: 640px) {
+    .dxstarter-styleguide .colorbox {
+      max-width: calc(50% - 20px); } }
   .dxstarter-styleguide .colorbox > * {
     opacity: 0.2; }
   .dxstarter-styleguide .colorbox .color {
     padding-bottom: 100%; }
   .dxstarter-styleguide .colorbox .name {
     font-size: 13px; }
+
+.dxstarter-styleguide .label {
+  text-transform: uppercase;
+  margin: 20px 0;
+  display: block; }
 
 .dxstarter-styleguide .color-primary > * {
   opacity: 1; }
