--- a/assets/sass/components/_mobile-menu.scss
+++ b/assets/sass/components/_mobile-menu.scss
@@ -191,9 +191,13 @@ body.is-menu-opened {
 		}
 	}
 
-	.menu-item:last-of-type .sub-menu {
-		right: 0;
+	.menu-item:nth-last-child(-n+3) .sub-menu {
+	    right: 0;
 		left: auto;
+
+		.sub-menu {
+			right: 100%;
+		}
 	}
 
 	.sub-menu {
@@ -201,9 +205,13 @@ body.is-menu-opened {
 		border: 1px solid #ccc;
 		top: calc(100% + #{$submenu-safe-zone - 2} );
 		background: rgba(white, 0.98);
-		max-width: 200px;
+		min-width: 200px;
 		text-align: left;
 		z-index: 99;
+
+		.menu-item {
+			display: relative;
+		}
 
 		// Used for easier hover movement.
 		&:before {
@@ -214,6 +222,11 @@ body.is-menu-opened {
 			background: transparent;
 			content: '';
 			display: block;
+		}
+
+		.sub-menu {
+			top: 0;
+			left: 100%;
 		}
 
 		a {
@@ -232,7 +245,6 @@ body.is-menu-opened {
 			width: 100%;
 			border-bottom: 1px solid #f0f0f0;
 			float: none;
-			min-width: 200px;
 			display: block;
 		}
 	}
