--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -45,3 +45,4 @@
 // TESTING AREA
 // ----------------------------------------------------------------------------
 @import "prebuilds/header-clean.scss";
+@import "prebuilds/flex-grid.scss";
