Remove prebuilds from css

--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -44,5 +44,5 @@
 
 // TESTING AREA
 // ----------------------------------------------------------------------------
-@import "prebuilds/header-clean.scss";
-@import "prebuilds/flex-grid.scss";
+// @import "prebuilds/header-clean.scss";
+// @import "prebuilds/flex-grid.scss";
