--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -17,6 +17,9 @@
 // comment it out nothing will break.
 @import "base/styleguide";
 
+// Set max height for the responsive images.
+@import "base/responsive-images";
+
 // The Foundation 6.0 grid system
 @import "foundation/foundation";
 
