--- a/assets/sass/base/_responsive-images.scss
+++ b/assets/sass/base/_responsive-images.scss
@@ -1,16 +1,10 @@
 // New responsive images design. The goal is to make images
 // that will fit always everywhere with equal height so that
 // they can be reused in grids keeping the same aspect ratio.
-// 
-// ============================================================
-// 
-// Create modifiers and change the values if you want different
-// aspect ratios.
-$aspect-ratio-main: percentage( 3 / 4 );
 
 .responsive-image {
 	overflow: hidden;
-	padding-bottom: $aspect-ratio-main;
+	padding-bottom: percentage( 3 / 4 );
 	width: 100%;
 	height: 0;
 	display: inline-block;
@@ -25,4 +19,43 @@ $aspect-ratio-main: percentage( 3 / 4 );
 		height: 100%;	
 		position: absolute;
 	}
+
+	// Different ratios that can be used for your responsive images
+	// If you want to default to one of the following below, simply
+	// update the padding-bottom of the base .responsive-image element
+
+	&.ratio-16-9 {
+		padding-bottom: percentage( 9/16 );
+	}
+
+	&.ratio-16-10 {
+		padding-bottom: percentage( 10/16 );
+	}
+
+	&.ratio-11-8 {
+		padding-bottom: percentage( 8/11 );
+	}
+
+	&.ratio-3-2 {
+		padding-bottom: percentage( 2/3 );
+	}
+
+	&.ratio-1-1 {
+		padding-bottom: percentage( 100 );
+	}
+
+	&.ratio-golden {
+		padding-bottom: percentage( 1 / 1.618 );	
+	}
+
+	&.ratio-silver {
+		padding-bottom: percentage( 1 / 2.414 );	
+	}
+
+	// Add border-radius to the responsive images.
+	&.radius-3 { border-radius: 3px; }
+	&.radius-5 { border-radius: 5px; }
+	&.radius-10 { border-radius: 10px; }
+	&.radius-20 { border-radius: 20x; }
+	&.radius-circle { border-radius: 50%; }
 }
