--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -289,7 +289,8 @@ img.aligncenter {
 
 img {
   max-width: 100%;
-  height: auto; }
+  height: auto;
+  margin-bottom: -8px; }
 
 /**
  * Required classes by WordPress. To pass the theme check
@@ -477,6 +478,12 @@ hr.clear {
   .text-white a:hover {
     color: white; }
 
+.truncate {
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap; }
+
 /**
  * Quick margin classes
  */
@@ -625,6 +632,7 @@ hr.clear {
   height: 0;
   display: inline-block;
   position: relative;
+  margin-bottom: -8px;
   background: #f8f8f8; }
   .responsive-image img {
     display: block;
@@ -3291,7 +3299,28 @@ hr.clear {
 
 /**
  * The standard section wrapper. Use this with other classes for the base styling.
+ * Default paddings are 40 and 80px
  */
+.section-fullwidth {
+  padding: 80px 0;
+  position: relative; }
+  @media (min-width: 640px) {
+    .section-fullwidth {
+      padding: 80px 0; } }
+  .section-fullwidth.border-bottom {
+    border-bottom: 1px solid #ddd; }
+  .section-fullwidth.border-top {
+    border-top: 1px solid #ddd; }
+  .section-fullwidth.shadow {
+    box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.3);
+    z-index: 10; }
+  .section-fullwidth.shadow-inset {
+    box-shadow: inset 0 5px 10px -5px rgba(0, 0, 0, 0.3);
+    z-index: 10; }
+  .section-fullwidth.inverted {
+    background: black;
+    color: white; }
+
 /**
  * DX MOBILE MENU
  * ============================================================================
@@ -3479,3 +3508,190 @@ hr.clear {
   @media (min-width: 640px) {
     .menu-item-has-children .dropdown-arrow {
       display: none; } }
+
+/**
+ * Clean basic header styling with logo on the left and menu on the right
+ * with white background and subtle shadow.
+ */
+.site-header {
+  padding: 30px 0;
+  box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.1); }
+  .site-header-inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center; }
+
+.site-description {
+  display: none; }
+
+.site-title,
+.site-branding {
+  margin: 0; }
+
+.main-navigation {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto; }
+  .main-navigation .menu-item a {
+    padding: 0.75rem 0.625rem;
+    color: #1a1a1a;
+    background-color: #fff;
+    border-radius: 0.1875rem; }
+  .main-navigation .menu-item a:hover {
+    color: #1a1a1a;
+    background-color: #f0f0f0; }
+
+@media (min-width: 640px) {
+  .menu-item:nth-last-child(-n+3) .sub-menu .sub-menu {
+    right: calc(100%);
+    top: -0.625rem; }
+  .sub-menu {
+    box-shadow: 0 7px 13px -9px rgba(0, 0, 0, 0.1);
+    padding: 1.25rem 0;
+    font-size: 14px;
+    min-width: 250px; }
+    .sub-menu .menu-item {
+      margin: 0;
+      padding: 0;
+      border: none; }
+      .sub-menu .menu-item:last-of-type {
+        margin-bottom: 0; }
+      .sub-menu .menu-item a {
+        padding: 0.3125rem 1.25rem;
+        display: block; }
+      .sub-menu .menu-item a:hover {
+        background: none; } }
+
+/**
+ * Various flex grid stylings that can be used across the theme.
+ * Very good for archive pages. Of course, the foundation grid is
+ * also a good choice here, but this is giving a bit more controll
+ * and is alowing you to add custom sizings and media queries without
+ * distrubting the stylings of foundation.
+ */
+.flex-grid-wrapper .flex-grid {
+  margin: 0 -20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap; }
+
+.flex-grid-wrapper .grid-item {
+  padding: 0 20px; }
+
+.flex-grid-wrapper .col-4 .grid-item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 calc(100% / 4);
+          flex: 1 1 calc(100% / 4); }
+
+.flex-grid-wrapper .col-3 .grid-item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 calc(100% / 3);
+          flex: 1 1 calc(100% / 3); }
+
+.flex-grid-wrapper .col-2 .grid-item {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 calc(100% / 2);
+          flex: 1 1 calc(100% / 2); }
+
+@media (max-width: 960px) {
+  .flex-grid-wrapper .col-2 .grid-item,
+  .flex-grid-wrapper .col-3 .grid-item,
+  .flex-grid-wrapper .col-4 .grid-item {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 calc(100% / 2);
+            flex: 1 1 calc(100% / 2); } }
+
+@media (max-width: 640px) {
+  .flex-grid-wrapper .col-2 .grid-item,
+  .flex-grid-wrapper .col-3 .grid-item,
+  .flex-grid-wrapper .col-4 .grid-item {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 calc(100% / 1);
+            flex: 1 1 calc(100% / 1); } }
+
+.flex-grid-wrapper.separators {
+  overflow: hidden; }
+  .flex-grid-wrapper.separators .grid-item {
+    border-right: 1px solid #f0f0f0;
+    border-bottom: 1px solid #f0f0f0;
+    margin-right: -1px;
+    margin-bottom: -2px;
+    padding: 40px; }
+
+.inverted .flex-grid-wrapper.separators .grid-item {
+  border-right: 1px solid #444;
+  border-bottom: 1px solid #444; }
+
+/**
+ * Most often used elements, pretty much in every single template more than once
+ */
+.section-heading {
+  text-align: center;
+  margin-bottom: 40px; }
+
+/**
+ * Image on left, text on right. Uses flexbox for alignment.
+ * Write media queries based on your theme's design and requirements.
+ */
+.section-halfsplit {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+  .section-halfsplit.image-right {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse; }
+  .section-halfsplit .section-image,
+  .section-halfsplit .section-content {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 50%;
+            flex: 1 1 50%;
+    padding: 33.33333px; }
+    @media (min-width: 640px) {
+      .section-halfsplit .section-image,
+      .section-halfsplit .section-content {
+        padding: 50px; } }
+    @media (min-width: 960px) {
+      .section-halfsplit .section-image,
+      .section-halfsplit .section-content {
+        padding: 100px; } }
+
+/**
+ *
+ */
+.section-hero {
+  position: relative; }
+  .section-hero:after {
+    content: '';
+    display: block;
+    height: 100%;
+    width: 100%;
+    background: -webkit-linear-gradient(top, transparent, rgba(0, 0, 0, 0.5));
+    background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.5));
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0; }
+  .section-hero .section-content {
+    position: absolute;
+    z-index: 2;
+    left: 50%;
+    bottom: 80px;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    color: white;
+    text-align: center;
+    max-width: 600px;
+    width: 100%; }
