--- a/assets/sass/base/_responsive-images.scss
+++ b/assets/sass/base/_responsive-images.scss
@@ -10,13 +10,16 @@
 	display: inline-block;
 	position: relative;
 
+	// Will fix issue with image paddings.
+	margin-bottom: -8px;
+
 	// Styling that can be removed:
 	background: #f8f8f8;
 
 	img {
 		display: block;
 		width: 100%;
-		height: 100%;	
+		height: 100%;
 		position: absolute;
 	}
 
@@ -45,11 +48,11 @@
 	}
 
 	&.ratio-golden {
-		padding-bottom: percentage( 1 / 1.618 );	
+		padding-bottom: percentage( 1 / 1.618 );
 	}
 
 	&.ratio-silver {
-		padding-bottom: percentage( 1 / 2.414 );	
+		padding-bottom: percentage( 1 / 2.414 );
 	}
 
 	// Add border-radius to the responsive images.
